Fix Indusrties Wrap

--- a/components/Industries/Industries.module.scss
+++ b/components/Industries/Industries.module.scss
@@ -18,9 +18,10 @@
     display:flex;
     flex-direction:row;
     justify-content: space-between;
+    flex-wrap:wrap;
 }
 .cards {
-    margin:0 auto;
+    margin:2rem auto;
     color:#fff;
     
     a {
